# makefsdata_portable

./: .gitignore  CMakeLists.txt  LICENSE  README.md  windows-toolchain.cmake
.github/workflows/: build_and_package.yml  ci.yml
src/: config.c  config.h  convert.c  convert.h  file_list.c  file_list.h  main.c  makefsdata_portable.c  makefsdata_portable.h  platform.c  platform.h  scan.c  scan.h
tests/: CMakeLists.txt  test_config.c  test_convert.c  test_file_list.c  test_main.c  test_platform.c  test_scan.c  test_shared.c  test_shared.h
tests/resources/single_file/: file1.txt
tests/resources/subdirs/: file2.txt
tests/resources/subdirs/subdir/: file3.txt
